[workspace]
members = [
    "facebook-fb-login-deauth-callback",
    "facebook-fb-login-deauth-callback/integrations/warp",
    "facebook-fb-login-deauth-callback/integrations/warp-demo",
    "facebook-graph-api-node/facebook-graph-api-node",
    "facebook-permission",
    "facebook-permission/html_parser",
    "facebook-signed-request",
    "facebook-webhook",
    "facebook-webhook/integrations/warp",
    "facebook-webhook/integrations/warp-demo",
]
