[package]
name = "facebook-fb-login-deauth-callback"
version = "0.1.0"
edition = "2018"

[dependencies]
facebook-signed-request = { path = "../facebook-signed-request", version = "=0.1.0" }

http = { version = "0.2", default-features = false }
form_urlencoded = { version = "1.0", default-features = false }
