[package]
name = "facebook-fb-login-deauth-callback"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Facebook Login Deauthorize Callback"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-fb-login-deauth-callback"
keywords = []
categories = []
readme = "README.md"

[dependencies]
facebook-signed-request = { path = "../facebook-signed-request", version = "^0.1" }

http = { version = "0.2", default-features = false }
form_urlencoded = { version = "1", default-features = false }
