[package]
name = "facebook-permission"
version = "0.1.7"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Permission"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-permission"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde-enum-str = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
