[package]
name = "facebook-signed-request"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = { version ="0.13", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
hmac = { version ="0.11", default-features = false }
sha2 = { version ="0.9", default-features = false }

thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
hex = "0.4"
