[package]
name = "facebook-signed-request"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Signed Request"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-signed-request"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-fb-login-deauth-callback",
    "with-data-deletion-callback",
    "with-ig-basic-display-deauth-callback",
    "with-ig-basic-display-data-deletion-request",
]
with-fb-login-deauth-callback = ["serde-aux", "chrono"]
with-data-deletion-callback = ["serde-aux", "chrono"]
with-ig-basic-display-deauth-callback = ["serde-aux", "chrono"]
with-ig-basic-display-data-deletion-request = ["serde-aux", "chrono"]

[dependencies]
base64 = { version ="0.13", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
hmac = { version ="0.12", default-features = false }
sha2 = { version ="0.10", default-features = false }

serde-aux = { version = "4", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, features = ["serde"], optional = true }

thiserror = { version = "1", default-features = false }

[dev-dependencies]
hex = { version = "0.4" }
