[package]
name = "facebook-webhook"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_qs = { version = "0.8", default-features = false }
http = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }
