[package]
name = "facebook-webhook"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Facebook - Webhook"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-webhook"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_qs = { version = "0.8", default-features = false }
http = { version = "0.2", default-features = false }
hmac = { version ="0.11", default-features = false }
sha-1 = { version ="0.9", default-features = false }
hex = { version ="0.4", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false }
serde-aux = { version = "2.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }

thiserror = { version = "1.0", default-features = false }
