[package]
name = "facebook-fb-login-deauth-callback-warp"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Facebook Login Deauthorize Callback warp integration"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-fb-login-deauth-callback-warp"
keywords = []
categories = []
readme = "README.md"

[dependencies]
facebook-fb-login-deauth-callback = { path = "../..", version = "^0.1" }

warp = { version = "0.3", default-features = false }
