[package]
name = "facebook-webhook-warp-demo"
version = "0.1.0"
edition = "2018"

[dependencies]
facebook-webhook-warp = { path = "../warp", version = "=0.1.1" }

tokio = { version = "1.7", default-features = false, features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.4"
warp = "0.3"
passwords = "3.1"
