[package]
name = "facebook-webhook-warp-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
facebook-webhook-warp = { path = "../warp" }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
pretty_env_logger = { version = "0.4" }
warp = { version = "0.3" }
passwords = { version = "3" }
