[package]
name = "facebook-webhook-warp"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Facebook - Webhook warp integration"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/facebook-rs"
homepage = "https://github.com/bk-rs/facebook-rs"
documentation = "https://docs.rs/facebook-webhook-warp"
keywords = []
categories = []
readme = "README.md"

[dependencies]
facebook-webhook = { path = "../..", version = "^0.1" }

warp = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
